--- a/income/piggy_bank/static/word_cloud.html
+++ b/income/piggy_bank/static/word_cloud.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div id="82ff6540d1e84e308d3c4ce9362f89ef" class="chart-container" style="width:900px; height:300px;"></div>
+    <div id="421c9cfccd6f4281ae293372bdb1d95d" class="chart-container" style="width:900px; height:300px;"></div>
     <script>
-        var chart_82ff6540d1e84e308d3c4ce9362f89ef = echarts.init(
-            document.getElementById('82ff6540d1e84e308d3c4ce9362f89ef'), 'white', {renderer: 'svg'});
-        var option_82ff6540d1e84e308d3c4ce9362f89ef = {
+        var chart_421c9cfccd6f4281ae293372bdb1d95d = echarts.init(
+            document.getElementById('421c9cfccd6f4281ae293372bdb1d95d'), 'white', {renderer: 'svg'});
+        var option_421c9cfccd6f4281ae293372bdb1d95d = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -68,7 +68,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(7,148,144)"
+                            "color": "rgb(118,29,61)"
                         }
                     }
                 },
@@ -77,7 +77,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(125,61,93)"
+                            "color": "rgb(45,74,104)"
                         }
                     }
                 },
@@ -86,7 +86,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(1,54,57)"
+                            "color": "rgb(7,35,112)"
                         }
                     }
                 },
@@ -95,7 +95,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(133,143,39)"
+                            "color": "rgb(155,43,20)"
                         }
                     }
                 },
@@ -104,7 +104,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(122,93,37)"
+                            "color": "rgb(116,152,15)"
                         }
                     }
                 },
@@ -113,7 +113,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(97,63,50)"
+                            "color": "rgb(154,89,89)"
                         }
                     }
                 },
@@ -122,7 +122,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(83,13,35)"
+                            "color": "rgb(48,71,115)"
                         }
                     }
                 },
@@ -131,7 +131,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(27,81,47)"
+                            "color": "rgb(34,33,104)"
                         }
                     }
                 },
@@ -140,7 +140,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(24,80,99)"
+                            "color": "rgb(106,69,134)"
                         }
                     }
                 },
@@ -149,7 +149,7 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(42,52,74)"
+                            "color": "rgb(104,65,106)"
                         }
                     }
                 },
@@ -158,7 +158,7 @@
                     "value": 45935.92,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(32,16,53)"
+                            "color": "rgb(65,44,64)"
                         }
                     }
                 },
@@ -167,7 +167,7 @@
                     "value": 30497.3,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(66,9,21)"
+                            "color": "rgb(76,152,143)"
                         }
                     }
                 },
@@ -176,7 +176,7 @@
                     "value": 34564.56,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(13,34,13)"
+                            "color": "rgb(19,36,46)"
                         }
                     }
                 },
@@ -185,7 +185,7 @@
                     "value": 26712.43,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(68,89,118)"
+                            "color": "rgb(80,140,157)"
                         }
                     }
                 },
@@ -194,7 +194,7 @@
                     "value": 30958.5,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(83,138,40)"
+                            "color": "rgb(54,159,61)"
                         }
                     }
                 },
@@ -203,7 +203,7 @@
                     "value": 14284.75,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(22,159,116)"
+                            "color": "rgb(117,103,141)"
                         }
                     }
                 },
@@ -212,7 +212,7 @@
                     "value": 16592.15,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(40,61,141)"
+                            "color": "rgb(17,69,71)"
                         }
                     }
                 },
@@ -221,7 +221,7 @@
                     "value": 22898.25,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(68,1,84)"
+                            "color": "rgb(158,59,120)"
                         }
                     }
                 },
@@ -230,7 +230,7 @@
                     "value": 28738.45,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(24,91,115)"
+                            "color": "rgb(49,130,41)"
                         }
                     }
                 },
@@ -239,7 +239,7 @@
                     "value": 30975.8,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(19,134,108)"
+                            "color": "rgb(96,158,102)"
                         }
                     }
                 },
@@ -248,7 +248,16 @@
                     "value": 36882.36,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(66,115,122)"
+                            "color": "rgb(47,122,12)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e745\u6708",
+                    "value": 39602.23,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(120,23,154)"
                         }
                     }
                 },
@@ -257,7 +266,7 @@
                     "value": 90000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(2,120,114)"
+                            "color": "rgb(77,112,95)"
                         }
                     }
                 },
@@ -266,7 +275,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(120,117,102)"
+                            "color": "rgb(143,114,159)"
                         }
                     }
                 },
@@ -275,7 +284,7 @@
                     "value": 30000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(72,27,70)"
+                            "color": "rgb(1,45,61)"
                         }
                     }
                 },
@@ -284,7 +293,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(16,32,15)"
+                            "color": "rgb(113,52,125)"
                         }
                     }
                 },
@@ -293,7 +302,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(134,138,128)"
+                            "color": "rgb(29,77,54)"
                         }
                     }
                 },
@@ -302,7 +311,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(133,48,141)"
+                            "color": "rgb(89,72,20)"
                         }
                     }
                 },
@@ -311,7 +320,7 @@
                     "value": 20000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(109,117,108)"
+                            "color": "rgb(96,104,99)"
                         }
                     }
                 },
@@ -320,7 +329,7 @@
                     "value": 10000.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(138,96,56)"
+                            "color": "rgb(66,46,149)"
                         }
                     }
                 },
@@ -329,7 +338,7 @@
                     "value": 142633.0,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(48,16,24)"
+                            "color": "rgb(35,90,134)"
                         }
                     }
                 },
@@ -338,7 +347,7 @@
                     "value": 53313.61,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(119,16,65)"
+                            "color": "rgb(112,58,47)"
                         }
                     }
                 },
@@ -347,7 +356,7 @@
                     "value": 45935.92,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(68,8,105)"
+                            "color": "rgb(62,38,20)"
                         }
                     }
                 },
@@ -356,7 +365,7 @@
                     "value": 30497.3,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(48,153,102)"
+                            "color": "rgb(95,3,143)"
                         }
                     }
                 },
@@ -365,7 +374,7 @@
                     "value": 34564.56,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(133,10,25)"
+                            "color": "rgb(151,67,111)"
                         }
                     }
                 },
@@ -374,7 +383,7 @@
                     "value": 26712.43,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(128,1,140)"
+                            "color": "rgb(78,47,55)"
                         }
                     }
                 },
@@ -383,7 +392,7 @@
                     "value": 30958.5,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(24,85,97)"
+                            "color": "rgb(123,78,136)"
                         }
                     }
                 },
@@ -392,7 +401,7 @@
                     "value": 14284.75,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(11,72,73)"
+                            "color": "rgb(50,11,49)"
                         }
                     }
                 },
@@ -401,7 +410,7 @@
                     "value": 16592.15,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(78,6,31)"
+                            "color": "rgb(60,12,63)"
                         }
                     }
                 },
@@ -410,7 +419,7 @@
                     "value": 22898.25,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(104,29,91)"
+                            "color": "rgb(24,55,139)"
                         }
                     }
                 },
@@ -419,7 +428,7 @@
                     "value": 28738.45,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(4,76,42)"
+                            "color": "rgb(98,46,24)"
                         }
                     }
                 },
@@ -428,7 +437,7 @@
                     "value": 30975.8,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(68,83,40)"
+                            "color": "rgb(37,23,75)"
                         }
                     }
                 },
@@ -437,7 +446,16 @@
                     "value": 36882.36,
                     "textStyle": {
                         "normal": {
-                            "color": "rgb(97,160,0)"
+                            "color": "rgb(79,11,145)"
+                        }
+                    }
+                },
+                {
+                    "name": "2020\u5e745\u6708",
+                    "value": 39602.23,
+                    "textStyle": {
+                        "normal": {
+                            "color": "rgb(79,42,32)"
                         }
                     }
                 }
@@ -467,7 +485,7 @@
         "borderWidth": 0
     }
 };
-        chart_82ff6540d1e84e308d3c4ce9362f89ef.setOption(option_82ff6540d1e84e308d3c4ce9362f89ef);
+        chart_421c9cfccd6f4281ae293372bdb1d95d.setOption(option_421c9cfccd6f4281ae293372bdb1d95d);
     </script>
 </body>
 </html>
